Kitty change font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,8 +2,8 @@ enable_audio_bell no
 
 include Flatland.ini
 
-font_family      Cartograph CF Italic
-font_size 11
+font_family      Cascadia Code PL
+font_size 10
 
 disable_ligatures never
 
