--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,28 @@ background_opacity 0.95
 font_family      Cascadia Code PL
 font_size 10
 
+adjust_line_height 3
+
 disable_ligatures never
 
 url_color #fff
 
 url_style curly
+
+map ctrl+left  neighboring_window left
+map ctrl+right neighboring_window right
+map ctrl+up    neighboring_window up
+map ctrl+down  neighboring_window down
+
+map ctrl+shift+z toggle_layout stack
+
+repaint_delay 10
+input_delay   3
+sync_to_monitor yes
+
+tab_bar_style custom
+tab_bar_edge  top
+tab_separator ""
+tab_title_template " {index}: {f'{title[:6]}…{title[-6:]}' if title.rindex(title[-1]) + 1 > 13 else title} "
 
 shell zsh
